<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddContact"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:theme="?attr/actionBarTheme"
        android:elevation="4dp">

        <ImageButton
            android:id="@+id/backButtonToolbarAddContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/backButtonDescription"  />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imagePhoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/baseline_person_24"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbarAddContact"
        android:padding="16dp"
        android:contentDescription="@string/PhotoDescription" />

    <TextView
        android:id="@+id/textViewErrorAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagePhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:visibility="gone"
        android:text="@string/errorMessageAddContact" />

    <EditText
        android:id="@+id/editTextContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_nameHint"
        android:layout_below="@id/imagePhoto"
        android:layout_margin="16dp"
        android:autofillHints="@string/contact_nameHint"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_numberHint"
        android:inputType="phone"
        android:layout_below="@id/editTextContactName"
        android:layout_margin="16dp"
        android:autofillHints="@string/phone_numberHint" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:layout_below="@id/editTextPhoneNumber"
        android:layout_margin="16dp"
        android:autofillHints="@string/emailHint" />

    <Button
        android:id="@+id/buttonAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addContactText"
        android:layout_below="@id/editTextEmail"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="24dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationAddContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:menu="@menu/bottom_nav_menu"/>

</RelativeLayout>
