<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarProfile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:theme="?attr/actionBarTheme"
        android:elevation="4dp">

        <ImageButton
            android:id="@+id/backButtonToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/backButtonDescription" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/baseline_person_24"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbarProfile"
        android:padding="16dp"
        android:contentDescription="@string/profile_iconDescription" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namePlaceholder"
        android:textSize="18sp"
        android:layout_below="@id/profileIcon"
        android:layout_centerHorizontal="true"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonePlaceholder"
        android:textSize="18sp"
        android:layout_below="@id/textName"
        android:layout_centerHorizontal="true"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailPlaceholder"
        android:textSize="18sp"
        android:layout_below="@id/textPhoneNumber"
        android:layout_centerHorizontal="true"
        android:padding="8dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>
